--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.2.6'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.firebase:firebase-database:10.2.6'
+    //compile 'com.google.firebas:firebase-database:9.0.2'
+    //compile 'com.google.firebase:firebase-core:10.0.6'
+    testCompile 'junit:junit:4.12'
     compile 'com.github.barteksc:android-pdf-viewer:2.0.3'
     testCompile 'junit:junit:4.12'
 }
